--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 }
+
+/* ИЗМЕНЕНИЯ НАЧИНАЮТСЯ ЗДЕСЬ */
+.On {
+  color: green;
+  font-weight: bold;
+}
+
+.Off {
+  color: gray;
+  font-weight: normal;
+}
